[package]
name = "zxproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rustls = "0.21"
tokio-rustls = "0.24"
rcgen = "0.11"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"

[[bin]]
name = "zxproxy"
path = "src/main.rs"
